--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -4,7 +4,7 @@
   height: 10vh;
   width: 100vw;
   border-top: 5px solid white;
-  background-color: rgba(237, 237, 237, 0.359);
+  // background-color: rgba(237, 237, 237, 0.359);
   padding-left: 80px;
   padding-right: 80px;
   // padding-top: 10px;
