--- a/src/scss/_mobile.scss
+++ b/src/scss/_mobile.scss
@@ -265,8 +265,13 @@
       color: black;
     }
   }
-}
 
+  .button--box {
+    width: 100%;
+    .button--box-padder {
+    }
+  }
+}
 @media only screen and (max-width: 600px) {
   .site--shell {
   }
