--- a/src/scss/_rockbottom.scss
+++ b/src/scss/_rockbottom.scss
@@ -39,8 +39,12 @@
 .rock--bottom--monitor {
   height: 75vh;
   width: 60vw;
-  background-color: rgba(169, 169, 169, 0.735);
-  border: 3px solid white;
+  // background-color: rgba(169, 169, 169, 0.735);
+  // background-color: rgba(245, 245, 245, 0.803);
+  // background-color: rgba(237, 237, 237, 0.359);
+  border: 3px solid rgb(169, 169, 169);
+
+  background-color: rgba(237, 237, 237, 0.859);
   padding: 25px;
   margin-left: 20vw;
   overflow-y: scroll;
@@ -265,15 +269,24 @@ a {
 
 .button--box {
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: center;
   // margin: 0px 1rem;
   width: 50%;
-  padding-right: 16px;
+  padding-left: 32px;
+  padding-right: 32px;
   // padding-left: 326px;
   // padding-left: 50%;
   gap: 16px;
   // background-color: pink;
+  .button--box-padder {
+    width: 410px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 16px;
+    // background-color: green;
+  }
 }
 .available--by {
   display: flex;
@@ -285,4 +298,8 @@ a {
 
 p {
   font-size: 1.25rem;
+}
+
+.no-touch {
+  pointer-events: none;
 }
